Ready to Users Page

--- a/src/components/Dialogs/Dialog/Dialog.module.css
+++ b/src/components/Dialogs/Dialog/Dialog.module.css
@@ -1,8 +1,5 @@
-.dialogs_item {
-  color: white;
+.dialogs_item a {
+  color: rgba(14, 167, 167, 0.979);
   text-decoration: none;
-}
-
-.dialogs_item.active {
-  color: gold;
+  font-weight: bold;
 }
