--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   max-width: 1200px;
   margin: 0 auto;
 
-  grid-template-rows: 60px 1fr;
+  grid-template-rows: 150px 1fr;
   grid-template-columns: 2fr 10fr;
   grid-template-areas:
     'h h'
@@ -12,5 +12,5 @@
 
 .app-wrapper__content {
   grid-area: c;
-  background-color: red;
+  border: 1px solid rgba(36, 206, 206, 0.651);
 }
