--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -11,5 +11,26 @@
   padding: 10px;
 }
 
-.dialogs_message {
+.dialogs_add {
+  margin: 10px;
+  text-align: right;
+}
+
+.dialogs_add__text {
+  width: 100%;
+  height: 100px;
+  border-radius: 5px;
+  resize: none;
+  border-color: rgba(14, 167, 167, 0.979);
+}
+
+.dialogs_add__btn {
+  margin-right: 20px;
+  width: 120px;
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+  background-color: rgba(14, 167, 167, 0.979);
+  color: #fff;
 }
