--- a/src/components/Dialogs/Message/Message.module.css
+++ b/src/components/Dialogs/Message/Message.module.css
@@ -1,12 +1,26 @@
-.dialogs_messages {
-  padding: 10px;
-}
-
 .dialogs_message {
-  color: white;
+  background-color: rgba(14, 167, 167, 0.979);
+  border-radius: 20px;
+  margin: 10px;
+  display: flex;
+  padding: 5px;
+  justify-content: space-between;
+  align-items: center;
+  color: #fff;
 }
 
-.dialogs_likes {
+.dialogs_message__text {
+  font-weight: bold;
+  padding-left: 40px;
+}
+
+.dialogs_message__likes {
+  padding-right: 10px;
+  font-size: 10px;
   text-align: center;
   margin-bottom: 20px;
+}
+
+.dialogs_message__likes span {
+  color: red;
 }
