--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,12 @@
 .header {
   grid-area: h;
-  background-color: green;
+  height: 150px;
+  border: 1px solid rgba(36, 206, 206, 0.651);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .header img {
-  width: 20px;
+  height: 100px;
 }
