--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -1,3 +1,26 @@
 .posts {
   padding: 10px;
 }
+
+.posts_input__item {
+  width: 100%;
+  height: 100px;
+  border-radius: 5px;
+  resize: none;
+  border-color: rgba(14, 167, 167, 0.979);
+}
+
+.posts_buttons {
+  padding: 40px;
+  text-align: right;
+}
+
+.posts_buttons__item {
+  margin-right: 20px;
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+  background-color: rgba(14, 167, 167, 0.979);
+  color: #fff;
+}
