--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -1,5 +1,30 @@
+.item {
+  background-color: rgba(14, 167, 167, 0.979);
+  border-radius: 20px;
+  margin: 40px;
+  display: flex;
+  padding: 10px;
+  justify-content: space-between;
+  align-items: center;
+  color: #fff;
+}
+
 .ava {
   width: 50px;
   height: 50px;
   border-radius: 30px;
+}
+
+.message {
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.likes {
+  font-size: 10px;
+  padding-right: 10px;
+}
+
+.likes span {
+  color: red;
 }
