--- a/src/components/Profile/MyPosts/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/MyPosts/ProfileInfo/ProfileInfo.module.css
@@ -1,10 +1,12 @@
 .prfile_img {
-  height: 220px;
   overflow: hidden;
+  text-align: center;
 }
 
 .profile_img__item {
-  width: 100%;
+  height: 200px;
+  background-size: contain;
+  border-radius: 50%;
 }
 
 .profile_descr {
